--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Aurélien Campergue : CV" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Aurélien Campergue by acampergue</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Aurélien Campergue</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
+      <header>
+        <h1>Aurélien Campergue</h1>
+        <p>CV</p>
+      </header>
 
-          <h1 id="project_title">Aurélien Campergue</h1>
-          <h2 id="project_tagline">CV</h2>
+      <div id="banner">
+        <span id="logo"></span>
 
-        </header>
-    </div>
+        <a href="https://github.com/acampergue" class="button fork"><strong>View On GitHub</strong></a>
+      </div><!-- end banner -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
         <pre><code>Aurélien Campergue, 30 ans
 1551 rue Louis Blériot
 78530 Buc
@@ -173,7 +178,7 @@ aurelien.campergue@gmail.com
 <table>
 <tr>
 <td>Langages</td>
-<td>Java, Python, XML, PHP, SQL, HTML, Bash, C#, C++, C, VB, VBA, COBOL, ADA</td>
+<td>Java, **Python**, XML, PHP, SQL, HTML, Bash, C#, C++, C, VB, VBA, COBOL, ADA</td>
 </tr>
 <tr>
 <td>Virtualisation</td>
@@ -229,16 +234,11 @@ Junit, Jmock, Mockito, Cobertura, Emma, Jacoco</td>
 <p>Habilité Confidentiel Défense
 Loisirs : Danses Swing, boxe française, skateboard</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
