Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -176,59 +176,58 @@ aurelien.campergue@gmail.com
 <a name="synth%C3%A8se-des--comp%C3%A9tences" class="anchor" href="#synth%C3%A8se-des--comp%C3%A9tences"><span class="octicon octicon-link"></span></a>Synthèse des  compétences</h2>
 
 <table>
+<thead><tr>
+<th align="left"></th>
+<th align="right"></th>
+</tr></thead>
+<tbody>
 <tr>
-<td>Langages</td>
-<td>Java, **Python**, XML, PHP, SQL, HTML, Bash, C#, C++, C, VB, VBA, COBOL, ADA</td>
+<td align="left">Langages</td>
+<td align="right">
+<strong>Java</strong>, <strong>Python</strong>, XML, PHP, SQL, HTML, <strong>Bash</strong>, C#, C++, C, VB, VBA, COBOL, ADA</td>
 </tr>
 <tr>
-<td>Virtualisation</td>
-<td>VMWare ESXi, Vcenter, QEMU/KVM</td>
-</tr>
-<tr>
-<td>Méthodologies</td>
-<td>UML, Design Pattern GRASP &amp; GOF, méthodes Agiles, IDEF0, Merise, Merise 2</td>
-</tr>
-<tr>
-<td>Outils</td>
-<td>Maven 3, Nexus, Subversion, Redmine, JAXB, JDOM, Drupal, Joomla, Hudson, Jenkins, Sonar
-Jdepend, PMD, Checkstyle, FindBugs, CPD
-Junit, Jmock, Mockito, Cobertura, Emma, Jacoco</td>
-</tr>
-<tr>
-<td>API &amp; Frameworks
-</td>
-<td>Spring (IoC, AOP, MVC), GWT (Gxt, SmartGWT), Log4J, SLF4J, Logback, JPA, JDO, Hibernate</td>
-</tr>
-<tr>
-<td>OS</td>
-<td>Debian, Ubuntu, Mint, Fedora, CentOS, RedHat, Ipcop, PFSense, Windows
+<td align="left">Virtualisation</td>
+<td align="right">VMWare ESXi, Vcenter, <strong>QEMU/KVM</strong>
 </td>
 </tr>
 <tr>
-<td>Anglais</td>
-<td>Très bon niveau (TOEIC 865)</td>
+<td align="left">Méthodologies</td>
+<td align="right">
+<strong>UML</strong>, <strong>Design Pattern</strong> GRASP &amp; GOF, méthodes <strong>Agiles</strong>, IDEF0, Merise, Merise 2</td>
 </tr>
 <tr>
-<td>Allemand</td>
-<td>Lu, écrit, parlé</td>
+<td align="left">Outils</td>
+<td align="right">
+<strong>Maven 3</strong>, Nexus, <strong>Subversion</strong>, Redmine, JAXB, JDOM, Drupal, Joomla, Hudson, Jenkins, Sonar, Jdepend, PMD, Checkstyle, FindBugs, CPD, Junit, Jmock, Mockito, Cobertura, Emma, Jacoco</td>
 </tr>
+<tr>
+<td align="left">API &amp; Frameworks</td>
+<td align="right">
+<strong>Spring</strong> (IoC, AOP, MVC), <strong>GWT</strong> (Gxt, SmartGWT), Log4J, SLF4J, <strong>Logback</strong>, JPA, JDO, Hibernate</td>
+</tr>
+<tr>
+<td align="left">OS</td>
+<td align="right">
+<strong>Debian</strong>, <strong>Ubuntu</strong>, Mint, Fedora, CentOS, RedHat, Ipcop, PFSense, Windows</td>
+</tr>
+<tr>
+<td align="left">Anglais</td>
+<td align="right">Très bon niveau (TOEIC 865)</td>
+</tr>
+<tr>
+<td align="left">Allemand</td>
+<td align="right">Lu, écrit, parlé</td>
+</tr>
+</tbody>
 </table><h1>
 <a name="formation" class="anchor" href="#formation"><span class="octicon octicon-link"></span></a>Formation</h1>
 
-<table>
-<tr>
-<td>2003-2008</td>
-<td>Diplôme d’ingénieur par apprentissage, spécialité informatique, IFIPS (ex FIIFO), Orsay</td>
-</tr>
-<tr>
-<td>2002-2003</td>
-<td>CPGE TSI, électronique et mécanique, Rueil Malmaison</td>
-</tr>
-<tr>
-<td>2001-2002</td>
-<td>Baccalauréat STI spécialité électronique (mention Très Bien), Carrières sur Seine</td>
-</tr>
-</table><h1>
+<p>| 2003-2008 |  Diplôme d’ingénieur par apprentissage, spécialité informatique, IFIPS (ex FIIFO), Orsay |
+| 2002-2003 |  CPGE TSI, électronique et mécanique, Rueil Malmaison |
+| 2001-2002 |  Baccalauréat STI spécialité électronique (mention Très Bien), Carrières sur Seine |</p>
+
+<h1>
 <a name="divers" class="anchor" href="#divers"><span class="octicon octicon-link"></span></a>Divers</h1>
 
 <p>Habilité Confidentiel Défense
