Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@ aurelien.campergue@gmail.com
 
 <ul>
 <li>Création de masters de postes de développement ; Ubuntu (10.04, 11.04, 12.04, 13.04) ; Mint (14,15) ; Debian (6.0, 7.0)</li>
-<li>Mise en place d'une infrastructure de clonage de masse (Clonezilla)</li>
+<li>Mise en place d'une infrastructure de clonage de masse (Clonezilla) ; Déploiement des postes</li>
 <li>Inventaire de parc informatique automatisé (OCS Inventory NG, GLPi)</li>
 </ul><h3>
-<a name="mise-en-place-dune-plateforme-de-d%C3%A9veloppement-logiciel-" class="anchor" href="#mise-en-place-dune-plateforme-de-d%C3%A9veloppement-logiciel-"><span class="octicon octicon-link"></span></a>Mise en place d'une plateforme de développement logiciel :</h3>
+<a name="mise-en-place-et-maintien-en-condition-op%C3%A9rationnelle-dune-plateforme-de-d%C3%A9veloppement-logiciel-" class="anchor" href="#mise-en-place-et-maintien-en-condition-op%C3%A9rationnelle-dune-plateforme-de-d%C3%A9veloppement-logiciel-"><span class="octicon octicon-link"></span></a>Mise en place et maintien en condition opérationnelle d'une plateforme de développement logiciel :</h3>
+
+<p>TODO:services installés sous forme d'appliances sous debian 7.0</p>
 
 <ul>
 <li>Gestion documentaire collaborative (Xwiki) </li>
@@ -75,11 +77,16 @@ aurelien.campergue@gmail.com
 <li>Qualimétrie : Sonar, Squale (PMD, Findbugs, Checkstyle, Metrics, ...) </li>
 <li>Gestion de dépôts des binaires (Nexus) </li>
 <li>Authentification centralisée (OpenLDAP)</li>
-</ul><h3>
+</ul><p>TODO:utilisée par +de 60dévelopeurs pendant 3 ans</p>
+
+<h3>
 <a name="plateforme-dint%C3%A9gration-et-de-tests-" class="anchor" href="#plateforme-dint%C3%A9gration-et-de-tests-"><span class="octicon octicon-link"></span></a>Plateforme d'intégration et de tests :</h3>
 
 <ul>
-<li>Gestion parallèle de fermes de machines virtuelles (près de 500 ) sur serveurs VMWare ESXi</li>
+<li>Gestion parallèle de fermes de machines virtuelles (près de 500 ) sur serveurs VMWare ESXi pendant plus de 2 ans</li>
+<li>Migration de la fermes de machines virtuelles vers des serveurs KVM</li>
+<li>Gestion parallèle de fermes de machines virtuelles (près de 500 ) sur serveurs KVM pendant plus de 1 an</li>
+<li>Déploiement hebdomadaires de plateformes complètes (40 VM, 35 Jboss, 2 Postgresql, 2 Cassandra, 10 Redis, 2 ActiveMQ, 4 lemonldap-ng)</li>
 </ul><h3>
 <a name="gestion-des-versions-applicatives" class="anchor" href="#gestion-des-versions-applicatives"><span class="octicon octicon-link"></span></a>Gestion des versions applicatives</h3>
 
@@ -87,7 +94,7 @@ aurelien.campergue@gmail.com
 <li>Référent intégration logicielle et système</li>
 <li>Responsable de l'architecture Maven des modules du projets</li>
 <li>Responsable de la qualité des versions du système </li>
-<li>Packaging natif (debian) des modules applicatifs</li>
+<li>Packaging natif Debian des modules applicatifs automatisé</li>
 <li>Support aux équipes de développement </li>
 </ul><h2>
 <a name="2010-thales-services--d%C3%A9monstrateur-ratp-3-mois" class="anchor" href="#2010-thales-services--d%C3%A9monstrateur-ratp-3-mois"><span class="octicon octicon-link"></span></a>2010 Thales Services – Démonstrateur RATP (3 mois)</h2>
@@ -95,9 +102,7 @@ aurelien.campergue@gmail.com
 <hr><h3>
 <a name="r%C3%A9f%C3%A9rent-technique-responsable-de-lint%C3%A9gration-continue-administrateur-syst%C3%A8me" class="anchor" href="#r%C3%A9f%C3%A9rent-technique-responsable-de-lint%C3%A9gration-continue-administrateur-syst%C3%A8me"><span class="octicon octicon-link"></span></a>Référent Technique, Responsable de l'intégration continue, Administrateur Système</h3>
 
-<h2></h2>
-
-<p></p><em>1 mission de développement, 2 missions d'administration système</em>
+<p><em>1 mission de développement, 2 missions d'administration système</em></p>
 
 <p>Développement démonstrateur RATP (3 mois)</p>
 
@@ -117,7 +122,7 @@ aurelien.campergue@gmail.com
 <h2>
 <a name="2010-2009----thales-services--projet-danemark---r%C3%A9f%C3%A9rent-technique" class="anchor" href="#2010-2009----thales-services--projet-danemark---r%C3%A9f%C3%A9rent-technique"><span class="octicon octicon-link"></span></a>2010-2009    Thales Services – Projet Danemark - Référent Technique</h2>
 
-<hr><p></p><em>1 mission de développement, 2 missions d'administration système</em>
+<hr><p><em>1 mission de développement, 2 missions d'administration système</em></p>
 
 <p>Développement d'une application de gestion des transports en commun (6 mois)</p>
 
@@ -130,7 +135,7 @@ aurelien.campergue@gmail.com
 <h2>
 <a name="2008-2009----thales-air-systems-weapon-systems--concepteur-et-d%C3%A9veloppeur-java" class="anchor" href="#2008-2009----thales-air-systems-weapon-systems--concepteur-et-d%C3%A9veloppeur-java"><span class="octicon octicon-link"></span></a>2008-2009    Thales Air Systems, Weapon Systems – Concepteur et développeur Java</h2>
 
-<hr><p></p><em>5 missions de développement, 2 missions d'administration système</em>
+<hr><p><em>5 missions de développement, 2 missions d'administration système</em></p>
 
 <p>Conception et développement d'un framework de simulation (3 mois)</p>
 
@@ -151,7 +156,7 @@ aurelien.campergue@gmail.com
 <h2>
 <a name="2006-2008----thales-epm--ing%C3%A9nieur-%C3%A9tudes-et-d%C3%A9veloppement-java" class="anchor" href="#2006-2008----thales-epm--ing%C3%A9nieur-%C3%A9tudes-et-d%C3%A9veloppement-java"><span class="octicon octicon-link"></span></a>2006-2008    Thales EPM – Ingénieur études et développement Java</h2>
 
-<hr><p></p><em>3 missions de développement</em>
+<hr><p><em>3 missions de développement</em></p>
 
 <p>Analyse et conception d'un moteur d'export de données (18 mois)</p>
 
@@ -164,7 +169,7 @@ aurelien.campergue@gmail.com
 <h2>
 <a name="2005-2006----cms-informatic---consultant" class="anchor" href="#2005-2006----cms-informatic---consultant"><span class="octicon octicon-link"></span></a>2005-2006    CMS Informatic - Consultant</h2>
 
-<hr><p></p><em>Formation, développement et administration</em>
+<hr><p><em>Formation, développement et administration</em></p>
 
 <p>Préparation et animation de formations techniques (anglais et français)</p>
 
@@ -172,65 +177,80 @@ aurelien.campergue@gmail.com
 
 <p>Développement VBA</p>
 
-<h2>
-<a name="synth%C3%A8se-des--comp%C3%A9tences" class="anchor" href="#synth%C3%A8se-des--comp%C3%A9tences"><span class="octicon octicon-link"></span></a>Synthèse des  compétences</h2>
+<h1>
+<a name="synth%C3%A8se-des--comp%C3%A9tences" class="anchor" href="#synth%C3%A8se-des--comp%C3%A9tences"><span class="octicon octicon-link"></span></a>Synthèse des  compétences</h1>
 
 <table>
 <thead><tr>
 <th align="left"></th>
-<th align="right"></th>
+<th align="left"></th>
 </tr></thead>
 <tbody>
 <tr>
 <td align="left">Langages</td>
-<td align="right">
+<td align="left">
 <strong>Java</strong>, <strong>Python</strong>, XML, PHP, SQL, HTML, <strong>Bash</strong>, C#, C++, C, VB, VBA, COBOL, ADA</td>
 </tr>
 <tr>
 <td align="left">Virtualisation</td>
-<td align="right">VMWare ESXi, Vcenter, <strong>QEMU/KVM</strong>
+<td align="left">VMWare ESXi, Vcenter, <strong>QEMU/KVM</strong>
 </td>
 </tr>
 <tr>
 <td align="left">Méthodologies</td>
-<td align="right">
+<td align="left">
 <strong>UML</strong>, <strong>Design Pattern</strong> GRASP &amp; GOF, méthodes <strong>Agiles</strong>, IDEF0, Merise, Merise 2</td>
 </tr>
 <tr>
 <td align="left">Outils</td>
-<td align="right">
+<td align="left">
 <strong>Maven 3</strong>, Nexus, <strong>Subversion</strong>, Redmine, JAXB, JDOM, Drupal, Joomla, Hudson, Jenkins, Sonar, Jdepend, PMD, Checkstyle, FindBugs, CPD, Junit, Jmock, Mockito, Cobertura, Emma, Jacoco</td>
 </tr>
 <tr>
 <td align="left">API &amp; Frameworks</td>
-<td align="right">
+<td align="left">
 <strong>Spring</strong> (IoC, AOP, MVC), <strong>GWT</strong> (Gxt, SmartGWT), Log4J, SLF4J, <strong>Logback</strong>, JPA, JDO, Hibernate</td>
 </tr>
 <tr>
 <td align="left">OS</td>
-<td align="right">
+<td align="left">
 <strong>Debian</strong>, <strong>Ubuntu</strong>, Mint, Fedora, CentOS, RedHat, Ipcop, PFSense, Windows</td>
 </tr>
 <tr>
 <td align="left">Anglais</td>
-<td align="right">Très bon niveau (TOEIC 865)</td>
+<td align="left">Très bon niveau (TOEIC 865)</td>
 </tr>
 <tr>
 <td align="left">Allemand</td>
-<td align="right">Lu, écrit, parlé</td>
+<td align="left">Lu, écrit, parlé</td>
 </tr>
 </tbody>
 </table><h1>
 <a name="formation" class="anchor" href="#formation"><span class="octicon octicon-link"></span></a>Formation</h1>
 
-<p>| 2003-2008 |  Diplôme d’ingénieur par apprentissage, spécialité informatique, IFIPS (ex FIIFO), Orsay |
-| 2002-2003 |  CPGE TSI, électronique et mécanique, Rueil Malmaison |
-| 2001-2002 |  Baccalauréat STI spécialité électronique (mention Très Bien), Carrières sur Seine |</p>
-
-<h1>
+<table>
+<thead><tr>
+<th align="left"></th>
+<th align="left"></th>
+</tr></thead>
+<tbody>
+<tr>
+<td align="left">2003-2008</td>
+<td align="left">Diplôme d’ingénieur par apprentissage, spécialité informatique, IFIPS (ex FIIFO), Orsay</td>
+</tr>
+<tr>
+<td align="left">2002-2003</td>
+<td align="left">CPGE TSI, électronique et mécanique, Rueil Malmaison</td>
+</tr>
+<tr>
+<td align="left">2001-2002</td>
+<td align="left">Baccalauréat STI spécialité électronique (mention Très Bien), Carrières sur Seine</td>
+</tr>
+</tbody>
+</table><h1>
 <a name="divers" class="anchor" href="#divers"><span class="octicon octicon-link"></span></a>Divers</h1>
 
-<p>Habilité Confidentiel Défense
+<p>Habilitable Confidentiel Défense
 Loisirs : Danses Swing, boxe française, skateboard</p>
       </section>
       <footer>
