Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,37 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Aurélien Campergue by acampergue</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Aurélien Campergue : CV" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Aurélien Campergue</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>Aurélien Campergue</h1>
-        <p>CV</p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">Aurélien Campergue</h1>
+          <h2 id="project_tagline">CV</h2>
 
-        <a href="https://github.com/acampergue" class="button fork"><strong>View On GitHub</strong></a>
-      </div><!-- end banner -->
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <pre><code>Aurélien Campergue, 30 ans
 1551 rue Louis Blériot
 78530 Buc
@@ -39,23 +34,14 @@
 aurelien.campergue@gmail.com
 </code></pre>
 
-<h1>
-<a name="expert-technique-polyvalent" class="anchor" href="#expert-technique-polyvalent"><span class="octicon octicon-link"></span></a>Expert Technique Polyvalent</h1>
-
-<h2>
-<a name="d%C3%A9veloppement-objet" class="anchor" href="#d%C3%A9veloppement-objet"><span class="octicon octicon-link"></span></a>Développement Objet</h2>
-
-<h2>
-<a name="usine-logicielle" class="anchor" href="#usine-logicielle"><span class="octicon octicon-link"></span></a>Usine logicielle</h2>
-
-<h2>
-<a name="administration-linux" class="anchor" href="#administration-linux"><span class="octicon octicon-link"></span></a>Administration Linux</h2>
+<p>-&gt;<strong>Ingénieur DevOps</strong>&lt;-
+-&gt;Spécialisé Java/JEE, Linux et outils open source&lt;-</p>
 
 <h1>
 <a name="exp%C3%A9rience-professionnelle" class="anchor" href="#exp%C3%A9rience-professionnelle"><span class="octicon octicon-link"></span></a>Expérience professionnelle</h1>
 
 <hr><h2>
-<a name="2013---2010--thales-services--projet-dune-28-mois" class="anchor" href="#2013---2010--thales-services--projet-dune-28-mois"><span class="octicon octicon-link"></span></a>2013 - 2010  Thales Services – Projet Dune (28 mois)</h2>
+<a name="2014---2010--thales-services--projet-dune-42-mois" class="anchor" href="#2014---2010--thales-services--projet-dune-42-mois"><span class="octicon octicon-link"></span></a>2014 - 2010  Thales Services – Projet Dune (42 mois)</h2>
 
 <hr><h3>
 <a name="gestion-du-parc-des-postes-de-d%C3%A9veloppement" class="anchor" href="#gestion-du-parc-des-postes-de-d%C3%A9veloppement"><span class="octicon octicon-link"></span></a>Gestion du parc des postes de développement</h3>
@@ -256,15 +242,22 @@ aurelien.campergue@gmail.com
 </table><h1>
 <a name="divers" class="anchor" href="#divers"><span class="octicon octicon-link"></span></a>Divers</h1>
 
-<p>Habilitable Confidentiel Défense</p>
-
-<p>Loisirs : Danses Swing, boxe française, skateboard</p>
+<ul>
+<li>Niveau Expert Technique</li>
+<li>Habilitable Confidentiel Défense</li>
+<li>Loisirs : Danses Swing, boxe française, skateboard</li>
+</ul>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
+
   </body>
 </html>
