Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,50 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Aurélien Campergue by acampergue</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Ingénieur DevOps : Spécialité Linux, Java, Maven et outils Open Source" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Ingénieur DevOps</title>
   </head>
+
   <body>
 
-      <header>
-        <h1>Aurélien Campergue</h1>
-        <p>CV</p>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/acampergue">View on GitHub</a>
 
-      <div id="banner">
-        <span id="logo"></span>
+          <h1 id="project_title">Ingénieur DevOps</h1>
+          <h2 id="project_tagline">Spécialité Linux, Java, Maven et outils Open Source</h2>
 
-        <a href="https://github.com/acampergue" class="button fork"><strong>View On GitHub</strong></a>
-      </div><!-- end banner -->
+        </header>
+    </div>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <pre><code>Aurélien Campergue, 30 ans
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <pre><code>Aurélien Campergue, 31 ans
 1551 rue Louis Blériot
 78530 Buc
 06.73.61.97.69
 aurelien.campergue@gmail.com
 </code></pre>
-
-<h1>
-<a name="ing%C3%A9nieur-devops" class="anchor" href="#ing%C3%A9nieur-devops"><span class="octicon octicon-link"></span></a><strong>Ingénieur DevOps</strong>
-</h1>
-
-<h2>
-<a name="sp%C3%A9cialit%C3%A9-java-jee-linux-et-outils-open-source" class="anchor" href="#sp%C3%A9cialit%C3%A9-java-jee-linux-et-outils-open-source"><span class="octicon octicon-link"></span></a>Spécialité Java, JEE, Linux et outils open source</h2>
 
 <h1>
 <a name="exp%C3%A9rience-professionnelle" class="anchor" href="#exp%C3%A9rience-professionnelle"><span class="octicon octicon-link"></span></a>Expérience professionnelle</h1>
@@ -99,15 +87,15 @@ aurelien.campergue@gmail.com
 </li>
 <li>Industrialisation des déploiements applicatifs basés sur les paquets Debian</li>
 <li>Industrialisation des configurations de plateforme</li>
+<li>Mise en place d'un processus de déploiement continu incluant un paramétrage spécifique de plateforme</li>
 <li>Mise en place d'une architecture de gestion de logs <em>(Logstash)</em>
 </li>
 <li>Mise en place d'une architecture de supervision des performances <em>(Munin)</em>
 </li>
 </ul><h3>
-<a name="gestion-des-versions-applicatives" class="anchor" href="#gestion-des-versions-applicatives"><span class="octicon octicon-link"></span></a>Gestion des versions applicatives</h3>
+<a name="r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me" class="anchor" href="#r%C3%A9f%C3%A9rent-int%C3%A9gration-logicielle-et-syst%C3%A8me"><span class="octicon octicon-link"></span></a>Référent intégration logicielle et système</h3>
 
 <ul>
-<li>Référent intégration logicielle et système</li>
 <li>Responsable de l'architecture Maven de l'ensemble des modules du projet</li>
 <li>Responsable de la qualité des versions du système (releases mensuelles)</li>
 <li>Support aux équipes de développement </li>
@@ -205,7 +193,7 @@ aurelien.campergue@gmail.com
 <tr>
 <td align="left">Outils</td>
 <td align="left">
-<strong>Maven 3</strong>, Nexus, <strong>Subversion</strong>, Redmine, JAXB, JDOM, Drupal, Joomla, Hudson, Jenkins, Sonar, Jdepend, PMD, Checkstyle, FindBugs, CPD, Junit, Jmock, Mockito, Cobertura, Emma, Jacoco</td>
+<strong>Maven 3</strong>, Hudson, <strong>Jenkins</strong>, Sonar, <strong>Nexus</strong>, <strong>Subversion</strong>, <strong>GIT</strong>, Redmine, JAXB, JDOM, Drupal, Joomla,  Jdepend, PMD, Checkstyle, FindBugs, CPD, Junit, Jmock, Mockito, Cobertura, Emma, Jacoco</td>
 </tr>
 <tr>
 <td align="left">API &amp; Frameworks</td>
@@ -252,16 +240,21 @@ aurelien.campergue@gmail.com
 <a name="divers" class="anchor" href="#divers"><span class="octicon octicon-link"></span></a>Divers</h1>
 
 <ul>
-<li>Niveau Expert Technique</li>
+<li>Expert Technique reconnu</li>
 <li>Habilitable Confidentiel Défense</li>
 <li>Loisirs : Danses Swing, boxe française, skateboard</li>
 </ul>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
     
+
   </body>
 </html>
